tests/spec/emit/snapshots/match_in_lambda_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct P { v: int }\nfn test() -> int {\n  let opt = Some(1)\n  let result = opt.map(|x| {\n    let p = P { v: x }\n    match p {\n      P { v } => (),\n    }\n    1\n  })\n  match result {\n    Some(x) => x,\n    None => 0,\n  }\n}\n"
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

type P struct {
	v int
}

func (p P) String() string {
	return fmt.Sprintf("P { v: %v }", p.v)
}

func test() int {
	opt := lisette.MakeOptionSome(1)
	result := lisette.OptionMap(opt, func(x int) int {
		p := P{v: x}
		_ = p
		return 1
	})
	if result.Tag == lisette.OptionSome {
		return result.SomeVal
	}
	return 0
}
