tests/spec/emit/snapshots/match_in_statement_position_followed_by_statement.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let result: Result<int, string> = Ok(42);
    match result {
      Ok(n) => fmt.Print(f"success: {n}\n"),
      Err(e) => fmt.Print(f"error: {e}\n"),
    }
    fmt.Print("done\n");
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func test() {
	result := lisette.MakeResultOk[int, string](42)
	if result.Tag == lisette.ResultOk {
		fmt.Printf("success: %d\n", result.OkVal)
	} else {
		fmt.Print("error: " + result.ErrVal + "\n")
	}
	fmt.Print("done\n")
}
