tests/spec/emit/snapshots/match_in_statement_position_with_guards.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let result: Result<int, string> = Ok(42);
    match result {
      Ok(n) if n > 0 => fmt.Print(f"positive: {n}\n"),
      Ok(n) => fmt.Print(f"non-positive: {n}\n"),
      Err(e) => fmt.Print(f"error: {e}\n"),
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func test() {
	result := lisette.MakeResultOk[int, string](42)
	switch {
	case result.Tag == lisette.ResultOk && result.OkVal > 0:
		fmt.Printf("positive: %d\n", result.OkVal)
	case result.Tag == lisette.ResultOk:
		fmt.Printf("non-positive: %d\n", result.OkVal)
	default:
		fmt.Print("error: " + result.ErrVal + "\n")
	}
}
