tests/spec/emit/snapshots/match_in_task_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn test() {
    task {
      let p = P { v: 1 }
      match p { P { v } => () }
    }
  }
---
package main

type P struct {
	v int
}

func test() {
	go func() {
		p := P{v: 1}
		_ = p
	}()
}
