tests/spec/emit/snapshots/match_multiple_with_same_vars.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let pair = (10, 20);
    let first = match pair {
      (a, b) => a + b,
    };
  
    let nested = ((1, 2), (3, 4));
    let second = match nested {
      ((a, b), (c, d)) => a + b + c + d,
    };
  
    first + second
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	pair := lisette.MakeTuple2[int, int](10, 20)
	first := pair.First + pair.Second
	nested := lisette.MakeTuple2[lisette.Tuple2[int, int], lisette.Tuple2[int, int]](lisette.MakeTuple2[int, int](1, 2), lisette.MakeTuple2[int, int](3, 4))
	second := nested.First.First + nested.First.Second + nested.Second.First + nested.Second.Second
	return first + second
}
