tests/spec/emit/snapshots/match_on_a_field_path_whose_arm_rebinds_the_root_keeps_the_subject_temp.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  struct Node { next: Option<int> }
  
  fn main() {
    let t = Node { next: Some(2) }
    match t.next {
      Some(t) => fmt.Println(t),
      None => fmt.Println("end"),
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

type Node struct {
	next lisette.Option[int]
}

func main() {
	t := Node{next: lisette.MakeOptionSome(2)}
	subject := t.next
	if subject.Tag == lisette.OptionSome {
		fmt.Println(subject.SomeVal)
	} else {
		fmt.Println("end")
	}
}
