tests/spec/emit/snapshots/match_on_a_field_path_with_a_guard_keeps_the_subject_temp.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  struct Task { retries: Option<int> }
  
  fn describe(t: Ref<Task>) -> string {
    match t.retries {
      Some(n) if n > 3 => "many",
      Some(_) => "some",
      None => "none",
    }
  }
  
  fn main() {
    fmt.Println(describe(&Task { retries: Some(1) }))
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

type Task struct {
	retries lisette.Option[int]
}

func describe(t *Task) string {
	subject := t.retries
	if subject.Tag == lisette.OptionSome {
		if subject.SomeVal > 3 {
			return "many"
		}
		return "some"
	}
	return "none"
}

func main() {
	fmt.Println(describe(&Task{retries: lisette.MakeOptionSome(1)}))
}
