tests/spec/emit/snapshots/match_on_aliased_lisette_enum_emits_enum_tag_switch.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum Color { Red, Green, Blue }
  
  type Palette = Color
  
  fn describe(p: Palette) -> string {
    match p {
      Color.Red => "r",
      Color.Green => "g",
      Color.Blue => "b",
    }
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

type Palette = Color

func describe(p Palette) string {
	switch p.Tag {
	case ColorRed:
		return "r"
	case ColorGreen:
		return "g"
	default:
		return "b"
	}
}
